...
                  return $0.from.timeIntervalSince1970 <= now.timeIntervalSince1970
                      && now.timeIntervalSince1970 < $0.to.timeIntervalSince1970
              })?.value
        else { return nil }

        return UIContextMenuConfiguration(identifier: nil, previewProvider: nil) { _ in
            let copy = UIAction(title: "Copy", image: UIImage(systemName: "doc.on.doc")) { _ in
                UIPasteboard.general.string = code
            }
            return UIMenu(children: [copy])
        }
    }

...
        if #available(iOS 13.0, *) {
            addButton.image = UIImage(systemName: "plus")
        } else {
            addButton.image = UIImage.fontAwesomeIcon(faName: "fa-plus", faType: .solid, textColor: .white)
        }
        
        addButton.accessibilityIdentifier = "manualAddButton"

        // Setup collection view.
        collectionView?.backgroundColor = UIColor.app.background
        collectionView?.alwaysBounceVertical = true
        collectionView?.allowsSelection = true
        collectionView?.allowsMultipleSelection = false
...
