...
/* Class = "UILabel"; text = "Interval"; ObjectID = "lPe-mF-g48"; */
"lPe-mF-g48.text" = "Interval";

/* Class = "UINavigationItem"; title = "Manual Add"; ObjectID = "Dea-K9-0Tn"; */
"Dea-K9-0Tn.title" = "Manual Add";

/* Class = "UIBarButtonItem"; title = "Next"; ObjectID = "Nay-kQ-eR7"; */
"Nay-kQ-eR7.title" = "Next";

/* Class = "UINavigationItem"; title = "Scan QR Code"; ObjectID = "NlQ-ih-McR"; */
"NlQ-ih-McR.title" = "Scan QR Code";

/* Class = "UILabel"; text = "Your token provider has not configured the issuer field, please enter the name of the issuer"; ObjectID = "rk9-rR-33m"; */
...
