...
        alert.addAction(UIAlertAction(title: actionTitle, style: UIAlertAction.Style.default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "uriIconView"
        outputUrlc = inputUrlc

        iconCollectionView.layer.borderColor = UIColor.darkGray.cgColor
        iconCollectionView.layer.borderWidth = 2.0
        iconCollectionView.layer.cornerRadius = 5.0

...
